Add Al-Rahman Farmers Multi-Purpose Cooperative to Maguindanao del Sur institutions

--- a/index.html
+++ b/index.html
@@ -2808,6 +2808,29 @@
                             <tr><td>Agroentrepreneurship NC III</td><td>445</td><td>20241988AFFAGE217077</td><td>July 24, 2024</td><td>July 23, 2029</td></tr>
                             </tbody></table>`   
             },
+            {
+                name: "Al-Rahman Farmers Multi-Purpose Cooperative",
+                type: "tvet",
+                lat: 6.8874464,
+                lng: 124.50025,
+                address: "Brgy. Manongkaling, Mamasapano, Maguindanao del Sur",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "April 18, 2024",
+                expiryDate: "April 17, 2029",
+                contactPerson: "Muawia M. Masukat (President)",
+                contactNumber: "Not Indicated",
+                email: "Not Indicated",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Production of High-Quality Inbred Rice, and Seed Certification, and Farm Mechanization</td><td>96</td><td>202119880006</td><td>April 18, 2024</td><td>April 17, 2029</td></tr>
+                            <tr><td>R
+                                ice Machinery Operations NC II</td><td>232</td><td>20241988AFFRMO207052</td><td>May 23, 2024</td><td>May 22, 2029</td></tr>
+                            <tr><td>Organic Agriculture Production NC II</td><td>232</td><td>20241988AFFOAP212050</td><td>May 23, 2024</td><td>May 22, 2029</td></tr>
+                            <tr><td>Pest Management (Vegetables) NC II</td><td>312</td><td>20241988AFFPMV207051</td><td>May 23, 2024</td><td>May 22, 2029</td></tr>
+                            <tr><td>Agroentrepreneurship NC II</td><td>239</td><td>20241988AFFAGE217190</td><td>December 26, 2024</td><td>December 25, 2029</td></tr>
+                            <tr><td>Agricultural Crops Production NC III</td><td>445</td><td>20241988AFFACP306191</td><td>December 26, 2024</td><td>December 25, 2029</td></tr>
+                            </tbody></table>`   
+            },
             
         ];
 
