Add Bangsamoro Trade School, Inc to Maguindanao del Sur institutions

--- a/index.html
+++ b/index.html
@@ -2831,6 +2831,24 @@
                             <tr><td>Agricultural Crops Production NC III</td><td>445</td><td>20241988AFFACP306191</td><td>December 26, 2024</td><td>December 25, 2029</td></tr>
                             </tbody></table>`   
             },
+            {
+                name: "Bangsamoro Trade School, Inc",
+                type: "tvet",
+                lat: 6.9781255,
+                lng: 124.2531341,
+                address: "Midtimbang Pob. Datu Anggal Midtimbang, Maguindanao Del Sur",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "August 10, 2024",
+                expiryDate: "August 9, 2029",
+                contactPerson: "Mohalidin S. Mamasanta",
+                contactNumber: "Not Indicated",
+                email: "Not Indicated",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Masonry NC II</td><td>181</td><td>20241988CONMAS218088</td><td>August 10, 2024</td><td>August 9, 2029</td></tr>
+                            <tr><td>Carpentry NC II</td><td>301</td><td>20241988CONCAR218089</td><td>August 10, 2024</td><td>August 9, 2029</td></tr>
+                            </tbody></table>`   
+            },
             
         ];
 
