Add new institutions and update program details for Maguindanao del Sur

--- a/index.html
+++ b/index.html
@@ -3164,24 +3164,103 @@
                             </tbody></table>`   
             },
             {
-                name: "Kanguan Uy Vocational and Technical Training Inc.",
+                name: "Kapalawan Institute of Technology Inc.",
                 type: "tvet",
-                lat: 7.03108,
-                lng: 124.4958,
-                address: "Kanguan Uy Vocational and Technical Training Inc.",
+                lat: 7.24386,
+                lng: 124.80314,
+                address: "Sitio Kiag Manarapan, Carmen, SGA",
                 province: "maguindanao-del-sur",
                 status: "accredited",
-                accreditationDate: "December 20, 2023",
-                expiryDate: "December 19, 2028",
-                contactPerson: "Badria U. Andamen (President)",
-                contactNumber: "09171061313/09518034582",
-                email: "kuvtt23@gmail.com",
+                accreditationDate: "June 20, 2024",
+                expiryDate: "June 19, 2029",
+                contactPerson: "Solaiman M. Dimasingkil (President)",
+                contactNumber: "09357061187",
+                email: "prodoccom@gmail.com",
                 coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
-                            <tr><td>Agricultural Crops Production NC II</td><td>336</td><td>20231988AFFACP213068</td><td>December 20, 2023</td><td>December 19, 2028</td></tr>
-                            <tr><td>Carpentry NC II</td><td>301</td><td>20231988CONCAR218069</td><td>December 20, 2023</td><td>December 19, 2028</td></tr>
-                            <tr><td>Driving NC II</td><td>118</td><td>2231988ALTDRV204070</td><td>December 20, 2023</td><td>December 19, 2028</td></tr>
+                            <tr><td>Agricultural Crops Production NC II</td><td>336</td><td>20231999AFFACP213014</td><td>June 20, 2024</td><td>June 19, 2029</td></tr>
+                            <tr><td>Carpentry NC II</td><td>301</td><td>20231999CONCAR218015</td><td>June 20, 2024</td><td>June 19, 2029</td></tr>
+                            <tr><td>Masonry NC II</td><td>181</td><td>20231999CONMAS218016</td><td>June 20, 2024</td><td>June 19, 2029</td></tr>
                             </tbody></table>`   
             },
+            {
+                name: "Kapuluan Institute of Technology Inc.",
+                type: "tvet",
+                lat: 7.02999,
+                lng: 124.50132,
+                address: "Poblacion, Datu Piang, Maguindanao",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "May 7, 2024",
+                expiryDate: "May 6, 2023",
+                contactPerson: "Zainudin U. Mohamad (President)",
+                contactNumber: "Not Indicated",
+                email: "kapuluan2022@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Bread and Pastry Production NC II</td><td>141</td><td>20221988TRSBPP209074</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
+                            <tr><td>Cookery NC II</td><td>316</td><td>20241988TRSCOK214188</td><td>December 26, 2024</td><td>December 25, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Lamalan Balis Flash Image Learning Center Inc.",
+                type: "tvet",
+                lat: 7.02378,
+                lng: 124.50634,
+                address: "Damabalas, Datu Piang, Maguindanao",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "May 10, 2024",
+                expiryDate: "May 9, 2029",
+                contactPerson: "Halima S. Lamalan (Administrator)",
+                contactNumber: "09154971396",
+                email: "Not Indicated",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Driving NC II</td><td>118</td><td>20131988ALTDRV204043</td><td>May 10, 2024</td><td>May 9, 2029</td></tr>
+                            <tr><td>Carpentry NC II</td><td>301</td><td>20211988CONCAR218033</td><td>May 10, 2024</td><td>May 9, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Libungan Torreta Education and Technology Academy, Inc.",
+                type: "tvet",
+                lat: 7.16837,
+                lng: 124.36421,
+                address: "15 Purok Center Libungan Torreta, Pigcawayan, North Cotabato, SGA",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "May 7, 2024",
+                expiryDate: "May 6, 2029",
+                contactPerson: "Halima S. Lamalan (Administrator)",
+                contactNumber: "Not Indicated",
+                email: "torretaacademy2020@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Agricultural Crops Production NC II</td><td>336</td><td>20211999AFFACP213056</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
+                            <tr><td>Carpentry NC II</td><td>336</td><td>20211999CONCAR218057</td><td>20211999AFFACP213056</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
+                            <tr><td>Electrical Installation and Maintenance NC II</td><td>196</td><td>20211999ELCEIM215058</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
+                            <tr><td>Masonry NC II</td><td>181</td><td>20211999CONMAS218059</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
+                            <tr><td>Bread and Pastry Production NC II</td><td>141</td><td>20241999TRSBPP209049</td><td>May 21, 2024</td><td>May 20, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Libungan Torreta Education and Technology Academy, Inc.",
+                type: "tvet",
+                lat: 7.16837,
+                lng: 124.36421,
+                address: "15 Purok Center Libungan Torreta, Pigcawayan, North Cotabato, SGA",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "May 7, 2024",
+                expiryDate: "May 6, 2029",
+                contactPerson: "Halima S. Lamalan (Administrator)",
+                contactNumber: "Not Indicated",
+                email: "torretaacademy2020@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Agricultural Crops Production NC II</td><td>336</td><td>20211999AFFACP213056</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
+                            <tr><td>Carpentry NC II</td><td>336</td><td>20211999CONCAR218057</td><td>20211999AFFACP213056</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
+                            <tr><td>Electrical Installation and Maintenance NC II</td><td>196</td><td>20211999ELCEIM215058</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
+                            <tr><td>Masonry NC II</td><td>181</td><td>20211999CONMAS218059</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
+                            <tr><td>Bread and Pastry Production NC II</td><td>141</td><td>20241999TRSBPP209049</td><td>May 21, 2024</td><td>May 20, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            
             
         ];
 
