Update institution data and AI coding instructions

--- a/index.html
+++ b/index.html
@@ -3233,31 +3233,105 @@
                 email: "torretaacademy2020@gmail.com",
                 coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
                             <tr><td>Agricultural Crops Production NC II</td><td>336</td><td>20211999AFFACP213056</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
-                            <tr><td>Carpentry NC II</td><td>336</td><td>20211999CONCAR218057</td><td>20211999AFFACP213056</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
+                            <tr><td>Carpentry NC II</td><td>336</td><td>20211999CONCAR218057</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
                             <tr><td>Electrical Installation and Maintenance NC II</td><td>196</td><td>20211999ELCEIM215058</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
                             <tr><td>Masonry NC II</td><td>181</td><td>20211999CONMAS218059</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
                             <tr><td>Bread and Pastry Production NC II</td><td>141</td><td>20241999TRSBPP209049</td><td>May 21, 2024</td><td>May 20, 2029</td></tr>
                             </tbody></table>`   
             },
             {
-                name: "Libungan Torreta Education and Technology Academy, Inc.",
+                name: "Maguindanao del Sur Livelihood Skills Training and Assessment Center",
                 type: "tvet",
-                lat: 7.16837,
-                lng: 124.36421,
-                address: "15 Purok Center Libungan Torreta, Pigcawayan, North Cotabato, SGA",
+                lat: 8.60536,
+                lng: 125.904114,
+                address: "Poblacion Buluan, Maguindanao",
                 province: "maguindanao-del-sur",
                 status: "accredited",
-                accreditationDate: "May 7, 2024",
-                expiryDate: "May 6, 2029",
-                contactPerson: "Halima S. Lamalan (Administrator)",
+                accreditationDate: "December 22, 2023",
+                expiryDate: "December 21, 2028",
+                contactPerson: "Cherry Mae G. Placido (President)",
                 contactNumber: "Not Indicated",
-                email: "torretaacademy2020@gmail.com",
+                email: "tesdamds.2023@gmail.com",
                 coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
-                            <tr><td>Agricultural Crops Production NC II</td><td>336</td><td>20211999AFFACP213056</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
-                            <tr><td>Carpentry NC II</td><td>336</td><td>20211999CONCAR218057</td><td>20211999AFFACP213056</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
-                            <tr><td>Electrical Installation and Maintenance NC II</td><td>196</td><td>20211999ELCEIM215058</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
-                            <tr><td>Masonry NC II</td><td>181</td><td>20211999CONMAS218059</td><td>May 7, 2024</td><td>May 6, 2029</td></tr>
-                            <tr><td>Bread and Pastry Production NC II</td><td>141</td><td>20241999TRSBPP209049</td><td>May 21, 2024</td><td>May 20, 2029</td></tr>
+                            <tr><td>Carpentry NC II</td><td>301</td><td>20231988CONCAR218073</td><td>December 22, 2023</td><td>December 21, 2028</td></tr>
+                            <tr><td>Dressmaking NC II</td><td>275</td><td>20231988DRMDRM205074</td><td>December 22, 2023</td><td>December 21, 2028</td></tr>
+                            <tr><td>Driving NC II</td><td>118</td><td>20231988ALTDRV204075</td><td>December 22, 2023</td><td>December 21, 2028</td></tr>
+                            <tr><td>Housekeeping NC II</td><td>436</td><td>20231988TRSHSK213076</td><td>December 22, 2023</td><td>December 21, 2028</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Maguindanao Institute of Technology and Learning Center, Inc.",
+                type: "tvet",
+                lat: 6.72059,
+                lng: 124.79349,
+                address: "Poblacion Buluan, Maguindanao",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "January 31, 2024",
+                expiryDate: "January 30, 2029",
+                contactPerson: "Jeanilyn B. Sionosa (OIC-Administrator)",
+                contactNumber: "09652058852",
+                email: "Not Indicated",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Bread and Pastry Production NC II</td><td>141</td><td>20161988TRSBPP209011</td><td>April 19, 2024</td><td>April 18, 2029</td></tr>
+                            <tr><td>Shielded Metal Arc Welding (SMAW) NC I</td><td>268</td><td>20211988MEEEAW106003</td><td>April 19, 2024</td><td>April 18, 2029</td></tr>
+                            <tr><td>Shielded Metal Arc Welding (SMAW) NC II</td><td>268</td><td>20211988MEEEAW206004</td><td>April 19, 2024</td><td>April 18, 2029</td></tr>
+                            <tr><td>Driving NC II</td><td>118</td><td>20211988ALTDRV204002</td><td>April 19, 2024</td><td>April 18, 2029</td></tr>
+                            <tr><td>Scaffolding Works NC II (Supported Type Scaffold)</td><td>181</td><td>20241988CONSCW218002</td><td>January 31, 2024</td><td>Kanuary 30, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Mamasapano Technical Vocational Education and Training Center",
+                type: "tvet",
+                lat: 6.89249,
+                lng: 124.50025,
+                address: "Brgy. Manungkaling, Mamasapano Maguindanao",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "February 24, 2024",
+                expiryDate: "February 23, 2029",
+                contactPerson: "Akmad A. Ampatuan, Sr. (President)",
+                contactNumber: "09219828450/09204104094",
+                email: "Not Indicated",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Driving NC II</td><td>118</td><td>201911988ALTDRV204141</td><td>February 24, 2024</td><td>February 23, 2029</td></tr>
+                            <tr><td>Electrical Installation and Maintenance NC II</td><td>196</td><td>20241988ELCEIM215067</td><td>July 8, 2024</td><td>July 7, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Mantawil Technical and Vocational Services Inc.",
+                type: "tvet",
+                lat: 6.89249,
+                lng: 124.50025,
+                address: "Brgy. Manungkaling, Mamasapano Maguindanao",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "February 24, 2024",
+                expiryDate: "February 23, 2029",
+                contactPerson: "Abdulnasser U. Mantawil (President)",
+                contactNumber: "09356501849",
+                email: "Not Indicated",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Motorcycle/Small Engine Servicing NC II</td><td>669</td><td>20241988ALTMSE204106</td><td>September 10, 2024</td><td>September 9, 2029</td></tr>
+                            <tr><td>Driving NC II</td><td>118</td><td>20241988ALTDRV204107</td><td>September 10, 2024</td><td>September 9, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Pagalungan Training and Assessment Center Inc.",
+                type: "tvet",
+                lat: 7.0551,
+                lng: 124.701665,
+                address: "3, 2nd Block, Pendaton St. Poblacion, Pagalungan, Maguindanao",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "August 15, 2024",
+                expiryDate: "August 14, 2029",
+                contactPerson: "Dianne Carolyn L. Tuno",
+                contactNumber: "Not Indicated",
+                email: "Not Indicated",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Motorcycle/Small Engine Servicing NC II</td><td>669</td><td>20241988ALTMSE204106</td><td>September 10, 2024</td><td>September 9, 2029</td></tr>
+                            <tr><td>Driving NC II</td><td>118</td><td>20241988ALTDRV204107</td><td>September 10, 2024</td><td>September 9, 2029</td></tr>
                             </tbody></table>`   
             },
             
