Update index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -3330,8 +3330,63 @@
                 contactNumber: "Not Indicated",
                 email: "Not Indicated",
                 coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
-                            <tr><td>Motorcycle/Small Engine Servicing NC II</td><td>669</td><td>20241988ALTMSE204106</td><td>September 10, 2024</td><td>September 9, 2029</td></tr>
-                            <tr><td>Driving NC II</td><td>118</td><td>20241988ALTDRV204107</td><td>September 10, 2024</td><td>September 9, 2029</td></tr>
+                            <tr><td>Agricultural Crops Production NC II</td><td>202</td><td>20241988AFFACP213118</td><td>August 15, 2024</td><td>August 14, 2029</td></tr>
+                            <tr><td>Driving NC II</td><td>118</td><td>20241988ALTDRV204119</td><td>August 15, 2024</td><td>August 14, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "RAZ Institute of Technology, Inc.",
+                type: "tvet",
+                lat: 6.735,
+                lng: 124.83667,
+                address: "National Highway, Kayaga, Pandag, Maguindanao del Sur",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "June 29, 2024",
+                expiryDate: "June 28, 2029",
+                contactPerson: "Badria K. Talembo",
+                contactNumber: "Not Indicated",
+                email: "Not Indicated",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Animal Production (Poultry-Chicken) NC II</td><td>312</td><td>20241988AFFPMV207068</td><td>June 29, 2024</td><td>June 28, 2029</td></tr>
+                            <tr><td>Pest Management (vegetables) NC II</td><td>226</td><td>20241988AFFAPP213069</td><td>June 29, 2024</td><td>June 28, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "Samelon Academy Incorporated",
+                type: "tvet",
+                lat: 6.9388925,
+                lng: 124.5064188,
+                address: "Linantangan, Shariff Saydona Mustapha, Maguindanao",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "June 20, 2024",
+                expiryDate: "June 19, 2029",
+                contactPerson: "Jaymoon A. Samelon (President)",
+                contactNumber: "09755520020",
+                email: "samelon.academy@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Carpentry NC II</td><td>301</td><td>20231988CONCAR218038</td><td>June 20, 2024</td><td>June 19, 2029</td></tr>
+                            </tbody></table>`   
+            },
+            {
+                name: "South Upi Agri-Tech Academy, Inc.",
+                type: "tvet",
+                lat: 6.8894175,
+                lng: 124.1381053,
+                address: "Romongaob, South Upi, Maguindanao del Sur",
+                province: "maguindanao-del-sur",
+                status: "accredited",
+                accreditationDate: "October 24, 2024",
+                expiryDate: "Ocotber 23, 2029",
+                contactPerson: "Sheiredan M. Belon (President)",
+                contactNumber: "09274120877",
+                email: "southupiagritechacademy@gmail.com",
+                coursesImage: `<table class='courses-table'><thead><tr><th>Program</th><th>Duration (hrs)</th><th>Program Reg. No.</th><th>Date Issued</th><th>Expiration Date</th></tr></thead><tbody>
+                            <tr><td>Organic Agriculture Production NC II</td><td>232</td><td>20241988AFFOAP212142</td><td>October 24, 2024</td><td>October 23, 2029</td></tr>
+                            <tr><td>Agroentrepreneurship NC III</td><td>445</td><td>20241988AFFAGE217143</td><td>October 24, 2024</td><td>October 23, 2029</td></tr>
+                            <tr><td>Animal Production (Poultry-Chicken) NC II</td><td>226</td><td>20241988AFFAPP213144</td><td>October 24, 2024</td><td>October 23, 2029</td></tr>
+                            <tr><td>Animal Production (Ruminants) NC II</td><td>306</td><td>20241988AFFAPR213145</td><td>October 24, 2024</td><td>October 23, 2029</td></tr>
                             </tbody></table>`   
             },
             
